--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         {{ content }}
       </div>
 
-      <div class="countdown-container-collapsible" id="countdownContainer">
+      <div class="countdown-container-collapsible-fixed" id="countdownContainer">
         <div class="countdown-header" onclick="toggleCountdown()">
-          <h4>🌸 Wedding Countdown 🪷</h4>
+          <span class="countdown-title">🌸 Wedding Countdown 🪷</span>
           <button class="countdown-toggle-btn" id="countdownToggle">
             <span class="toggle-arrow">−</span>
           </button>
@@ -50,6 +50,8 @@
           </div>
         </div>
       </div>
+
+
     </div>
 
     <!-- JavaScript loading -->
